# drl-lab

./: .gitignore  README.md  notes.md  pyproject.toml  pyrightconfig.json
drl_lab/lib/actions/: __init__.py  argmax.py  distribution.py  epsilon_greedy.py
drl_lab/lib/agents/: value_agent.py
drl_lab/lib/core/actions/: __init__.py  argmax.py  distribution.py  epsilon_greedy.py
drl_lab/lib/core/agents/: __init__.py  value_agent.py
drl_lab/lib/core/experience/: __init__.py  transition.py
drl_lab/lib/core/interfaces/: __init__.py  experience.py
drl_lab/lib/core/types/: __init__.py
drl_lab/lib/experience/: interface.py  transition.py  types.py
drl_lab/lib/ignite/handlers/: __init__.py  calculation.py  timer.py
drl_lab/lib/ignite/wrappers/: __init__.py  ep_stats.py
drl_lab/lib/rl/actions/: __init__.py  argmax.py  distribution.py  epsilon_greedy.py  interface.py
drl_lab/lib/rl/agents/: __init__.py  interface.py  value_agent.py
drl_lab/lib/rl/experience/: __init__.py  interface.py  transition.py  types.py
drl_lab/lib/rl/interfaces/: __init__.py  action.py  agent.py  experience.py
drl_lab/lib/rl/types/: __init__.py  experience.py
drl_lab/lib/trn/decorators/: statistics.py
drl_lab/lib/trn/handlers/: tensorboard.py  timer.py  utils.py
drl_lab/lib/trn/wrappers/: timing.py  (+1 more)
drl_lab/projects/: loss.py  main-tb.py  main-wandb.py  main.py  main_clean.py  main_new.py  old.py  process_function.py  test.py  test2.py  utils.py
drl_lab/projects/model/: loss.py  network.py
drl_lab/projects/train/: handlers.py  train.py
drl_lab/projects/wandb/: latest-run
(+25 files in other folders)
