[tool.poetry]
name = "drl-lab"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "drl_lab"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pyright = "^1.1.365"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
