[tool.poetry]
name = "drl-lab"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "drl_lab"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
cpprb = "^10.7.2"
pytorch-ignite = "^0.5.0.post2"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.16.2"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pyright = "^1.1.365"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
